[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
description = "Wrapper of SCOP(Solver for  COnstraint Programing)"
name = "scop"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
